fix register overlay close button

--- a/templates/widgets/actions.html.twig
+++ b/templates/widgets/actions.html.twig
@@ -8,7 +8,7 @@
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".edit-post-modal">
 				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Connect with Facebook
 			</button>
-			<button type="button" class="btn btn-success sign-out" data-action="{{ urlFor('signOut') }}">
+			<button type="button" class="btn btn-success btn-sign-out" data-action="{{ urlFor('signOut') }}">
 				<span class="glyphicon glyphicon-off" aria-hidden="true"></span> Sign out
 			</button>
 		</div>
