--- a/templates/widgets/register.html.twig
+++ b/templates/widgets/register.html.twig
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary">
+					<button type="button" class="btn btn-primary btn-register">
 						<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Register
 					</button>
 				</div>
