--- a/templates/widgets/sign_in.html.twig
+++ b/templates/widgets/sign_in.html.twig
@@ -24,7 +24,7 @@
 									<label for="sign-in-password">Password</label>
 									<input type="password" class="form-control" id="sign-in-password" placeholder="Password">
 								</div>
-								<button type="button" class="btn btn-primary">
+								<button type="button" class="btn btn-primary btn-sign-in">
 									<span class="glyphicon glyphicon-user" aria-hidden="true"></span> Sign in
 								</button>
 							</form>
