--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -16,6 +16,7 @@
 </head>
 <body>
 	<div id="fb-root"></div>
+	<script src="{{ baseUrl() }}/js/facebook.js"></script>
 	<script src="{{ baseUrl() }}/js/app.js"></script>
 	<div class="container">
 		<div class="page-header">
