--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,8 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-
+	<div class="panel panel-info">
+		<div class="panel-heading">Facebook status</div>
+		<div id="status" class="panel-body"></div>
+	</div>
 {% endblock %}
