--- a/templates/widgets/sign_in.html.twig
+++ b/templates/widgets/sign_in.html.twig
@@ -12,14 +12,7 @@
 							<br>
 							<br>
 							<br>
-							<div
-								class="fb-login-button"
-								data-max-rows="1"
-								data-size="xlarge"
-								data-show-faces="false"
-								data-auto-logout-link="false"
-								scope="public_profile,email"
-								onlogin="checkLoginState();"></div>
+							<button type="button" class="btn btn-primary btn-facebook-login">Sign in or register with Facebook</button>
 						</div>
 						<div class="col-md-6">
 							<form method="post" class="sign-in" action="{{ urlFor('signIn') }}">
