--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,9 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Facebook API demo</title>
-	<script src="{{ baseUrl() }}/bower_components/jquery/dist/jquery.min.js"></script>
 	<link href="{{ baseUrl() }}/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-	<script src="{{ baseUrl() }}/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script data-main="{{ baseUrl() }}/js/main" src="{{ baseUrl() }}/bower_components/requirejs/require.js"></script>
 	<script>
 		var config = {
 			appId: '{{ appId }}'
@@ -16,8 +15,6 @@
 </head>
 <body>
 	<div id="fb-root"></div>
-	<script src="{{ baseUrl() }}/js/facebook.js"></script>
-	<script src="{{ baseUrl() }}/js/app.js"></script>
 	<div class="container">
 		<div class="page-header">
 			<h1>Facebook API demo <small>v2</small></h1>
