rename sign in to login

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -25,7 +25,7 @@
 		{% block content %}{% endblock %}
 
 		{% include 'widgets/register.html.twig' %}
-		{% include 'widgets/sign_in.html.twig' %}
+		{% include 'widgets/login.html.twig' %}
 	</div>
 </body>
 </html>
