--- a/templates/widgets/login.html.twig
+++ b/templates/widgets/login.html.twig
@@ -12,7 +12,10 @@
 							<br>
 							<br>
 							<br>
-							<button type="button" class="btn btn-primary btn-facebook-login">Login or register with Facebook</button>
+							<button
+								type="button"
+								class="btn btn-primary btn-facebook-login"
+								data-connect-url="{{ urlFor('facebookConnect') }}">Login or register with Facebook</button>
 						</div>
 						<div class="col-md-6">
 							<form method="post" class="login" action="{{ urlFor('login') }}">
