--- a/templates/widgets/login.html.twig
+++ b/templates/widgets/login.html.twig
@@ -15,7 +15,7 @@
 							<button
 								type="button"
 								class="btn btn-primary btn-facebook-login"
-								data-connect-url="{{ urlFor('facebookConnect') }}">Login or register with Facebook</button>
+								data-login-url="{{ urlFor('facebookLogin') }}">Login or register with Facebook</button>
 						</div>
 						<div class="col-md-6">
 							<form method="post" class="login" action="{{ urlFor('login') }}">
