add facebook status update

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Facebook API demo</title>
 	<link href="{{ baseUrl() }}/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ baseUrl() }}/css/style.css" rel="stylesheet">
 	<script data-main="{{ baseUrl() }}/js/main" src="{{ baseUrl() }}/bower_components/requirejs/require.js"></script>
 	<script>
 		var config = {
