add facebook status update

--- a/templates/widgets/statusUpdate.html.twig
+++ b/templates/widgets/statusUpdate.html.twig
@@ -2,8 +2,8 @@
 	<div class="panel-body">
 		<form method="post" class="status-update form-inline" action="{{ urlFor('statusUpdate') }}">
 			<div class="form-group">
-				<label for="status">Update Status</label>
-				<input type="text" class="form-control" id="status" placeholder="What's on your mind?">
+				<label for="message">Update Status</label>
+				<input type="text" class="form-control" id="message" placeholder="What's on your mind?">
 			</div>
 			<button type="button" class="btn btn-primary btn-status-update">
 				<span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Post
